# lambda-with-pytorch-container

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
lambda/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
lambda/lib/: models.py  prediction.py
lib/: lambda-with-pytorch-container-stack.ts
test/: lambda-with-pytorch-container.test.ts
